# laina

./: .env.example  .env.local.backup  .env.local.example  .gitignore  .local.env.example  Cargo.toml  DEVELOPMENT.md  Makefile  astro.config.mjs  currencies-local.ts  currencies.ts  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/: pull_request_template.md
.github/actions/setup-rust-stellar/: action.yml
.github/workflows/: deploy.yml  rustfmt.yml  verify-build.yml
contracts/loan_manager/src/: contract.rs  error.rs  lib.rs  oracle.rs  storage.rs
contracts/loan_pool/src/: contract.rs  error.rs  interest.rs  lib.rs  pool.rs  positions.rs  storage.rs
contracts/reflector_mock/src/: lib.rs
liquidation-bot/: Cargo.toml
liquidation-bot/migrations/2025-01-23-111009_create_loans/: up.sql
liquidation-bot/migrations/2025-05-29-101118_create_prices/: down.sql  up.sql
liquidation-bot/src/: lib.rs  models.rs  oracle.rs  schema.rs  utils.rs
scripts/: add_trustline.ts  initialize.ts  initialize_local.ts  issue_tokens.ts  issue_tokens_local.ts  send_tokens_to_freighter.ts  set-oracle-price.ts  upgrade.ts  util.ts  util_local.ts
src/: env.d.ts
src/components/: Nav.tsx
src/components/AssetsModal/: PositionsView.tsx  WithdrawView.tsx
src/components/Dialog/: Dialog.tsx  error-parsing.test.ts  error-parsing.ts
src/components/LoansModal/: LoansView.tsx  RepayView.tsx
src/contexts/: loan-context.tsx  pool-context.tsx  wallet-context.tsx
src/lib/: formatting.ts  horizon.ts
src/pages/_borrow/: BorrowMobileCard.tsx  BorrowPage.tsx
src/pages/_borrow/BorrowModal/: BorrowStep.tsx
src/pages/_lend/: LendMobileCard.tsx  LendPage.tsx  LendableAsset.tsx
src/utils/: currencies.ts
