[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.6", features = ["postgres"] }
dotenvy = "0.15"
log = "0.4.25"
env_logger = "0.11.6"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"
stellar-xdr = { version="22.1.0", features=["base64"] }
serde = { version = "1.0", features = ["derive"] }
stellar-strkey = "0.0.9"
base64 = "0.22.1"
