[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

[features]
local = []

[dependencies]
diesel = { version = "2.2.6", features = ["postgres"] }
dotenvy = "0.15"
log = "0.4.25"
env_logger = "0.11.6"
stellar-rpc-client = "22.1.0"
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"
stellar-xdr = { version = "22.1.0", features=["base64", "alloc", "serde"] }
serde = { version = "1.0", features = ["derive"] }
stellar-strkey = "0.0.9"
base64 = "0.22.1"
anyhow = "1.0.98"
stellar_sdk = "0.1.4"
soroban-client = "0.4.7"
soroban-sdk = "22.0.5"
soroban-token-sdk = "22.0.5"

