[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

[features]
local = []

[dependencies]
diesel = { version = "2.2.12", features = ["postgres"] }
dotenvy = "0.15"
log = "0.4.27"
env_logger = "0.11.8"
stellar-rpc-client = "23.0.1"
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
stellar-xdr = { version = "23.0.0", features=["base64", "alloc", "serde"] }
serde = { version = "1.0", features = ["derive"] }
stellar-strkey = "0.0.13"
base64 = "0.22.1"
anyhow = "1.0.98"
soroban-client = "0.5.1"
soroban-sdk = "23.0.2"
soroban-token-sdk = "23.0.2"
once_cell = "1.21"

[dev-dependencies]
mockall = "0.13.0"
tokio-test = "0.4.4"
serial_test = "3.1.1"
